add: missing translations

--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -331,10 +331,40 @@
             "TYPE_PER_PACKAGE": "Precio incl. IVA por paquete",
             "TYPE_RANGE": "Precio incl. IVA por rango",
             "TYPE_FIXED": "Precio incl. IVA Fijo",
+            "TYPE_PERCENTAGE": "Porcentaje",
+            "TYPE_PERCENTAGE_HELP": "En la mayoría de los casos de uso, el método de cálculo: 'Todas las reglas coincidentes' es necesario para el precio basado en porcentaje.",
             "PER_PACKAGE_DEL_DISCOUNT": "Quitar descuento",
             "PER_PACKAGE_ADD_DISCOUNT": "Agregar descuento"
         },
+        "PRICING_ADD_RULE": "Añadir regla por pedido",
+        "PRICING_ADD_RULE_HELP": "Añadir una regla que se aplique una vez por pedido, recomendada para entregas simples (una recogida, una entrega) y pedidos de Food Tech",
+        "PRICING_ADD_RULE_PER_TASK": "Añadir regla por punto",
+        "PRICING_ADD_RULE_PER_TASK_HELP": "Añadir una regla que se aplique por cada punto (tarea de RECOGIDA y/o ENTREGA), recomendada para entregas complejas de múltiples puntos",
+        "PRICING_PRICING_RULE_HELP": "Reglas para calcular el precio del pedido",
+        "PRICING_PRICING_RULE_SET_STRATEGY_FIND_LABEL": "La primera regla que coincida",
+        "PRICING_PRICING_RULE_SET_STRATEGY_LABEL": "Método de cálculo",
+        "PRICING_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "Todas las reglas coincidentes",
+        "PRICING_PRICING_RULE_SET_STRATEGY_UNKNOWN_LABEL": "Desconocido",
+        "RULE_LEGACY_TARGET_DYNAMIC": "Entregas simples (una recogida, una entrega): aplicar una vez por pedido; Entregas multipunto: aplicar por cada punto (tarea de RECOGIDA y/o ENTREGA) si:",
+        "RULE_LEGACY_TARGET_DYNAMIC_HELP": "Esta regla está obsoleta en favor de reglas separadas aplicadas ya sea una vez por pedido o por punto. Considere migrar al nuevo formato. (Ver la guía de migración arriba)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "Este esquema de precios contiene reglas obsoletas aplicadas de manera diferente para entregas simples (una recogida, una entrega) y entregas complejas multipunto, lo que las hace propensas a errores. Por lo tanto, se desaconseja el uso de tales reglas. Considere migrar al nuevo formato:",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY": "Cambiar a: Aplicar reglas una vez por pedido",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY_HELP": "(elija esta opción si utiliza este esquema de precios para pedidos de Food Tech o entregas simples (una recogida, una entrega))",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK": "Cambiar a: Aplicar reglas por cada punto (tarea de RECOGIDA y/o ENTREGA)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK_HELP": "(elija esta opción si utiliza este esquema de precios para entregas complejas multipunto)",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsoleto",
+        "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Total de artículos de pedido Food Tech",
+        "RULE_PICKER_LINE_PACKAGES_TARGET_DELIVERY": "Paquetes (total)",
+        "RULE_PICKER_LINE_PACKAGES_TARGET_TASK": "Paquetes (usar solo con Tipo de tarea: Entrega)",
+        "RULE_PICKER_LINE_TIME_SLOT": "Franja horaria",
+        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_DELIVERY": "Unidades de volumen (total)",
+        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_TASK": "Unidades de volumen (usar solo con Tipo de tarea: Entrega)",
+        "RULE_PICKER_LINE_WEIGHT_TARGET_DELIVERY": "Peso (kg) (total)",
+        "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Peso (kg) (usar solo con Tipo de tarea: Entrega)",
+        "RULE_TARGET_DELIVERY": "Aplicar una vez por pedido si:",
+        "RULE_TARGET_TASK": "Aplicar por cada punto (tarea de RECOGIDA y/o ENTREGA) si:",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrar pedidos recurrentes",
+        "ADMIN_DASHBOARD_ONLY_UNASSIGNED_WITH_SHIFT": "Solo la columna de tareas no asignadas maneja la selección con la tecla shift",
         "RECURRENCE_RULE_ADD": "Agregar regla de recurrencia",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Por favor, elija al menos un día",
         "SUBSCRIPTION_CANCELLED": "Regla de recurrencia cancelada",
@@ -419,6 +449,7 @@
         "DELIVERY_FORM": "Formulario de entrega",
         "DELIVERY_FORM_ADMIN_PRICE_ERROR": "No se pudo calcular el precio. Puede crear el envío, pero no olvide corregir la regla de precio asociada a esta tienda.",
         "DELIVERY_FORM_SHOP_PRICE_ERROR": "No se pudo calcular el precio. Puede crear el envío y le contactaremos con el precio correcto.",
+        "SWITCH_BACK_TIMESLOTPICKER": "Volver al selector de franjas horarias",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "No se pudo eliminar. Por favor, desvincule este conjunto de paquetes de las tiendas o formularios de entrega a los que pueda aplicarse.",
         "ADMIN_PLEASE_UNLINK_PRICING_RULE_SET_BEFORE_DELETION": "No se pudo eliminar. Por favor, desvincule esta tarifa de los establecimientos, restaurantes o formularios de entrega a los que pueda aplicarse.",
         "SHOW_DETAILS": "Mostrar detalles",
@@ -630,9 +661,9 @@
         "DELIVERY_DROPOFF": "Entrega",
         "DELIVERY_FORM_PICKUP_HOUR": "Hora de recogida",
         "DELIVERY_FORM_DROPOFF_HOUR": "Hora de entrega",
-        "DELIVERY_FORM_NEW_PRICE": "Nuevo precio",  
-        "DELIVERY_FORM_OLD_PRICE": "Precio anterior",  
-        "DELIVERY_FORM_TRACKING_LINK": "Enlace de seguimiento",  
+        "DELIVERY_FORM_NEW_PRICE": "Nuevo precio",
+        "DELIVERY_FORM_OLD_PRICE": "Precio anterior",
+        "DELIVERY_FORM_TRACKING_LINK": "Enlace de seguimiento",
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Copiar enlace de seguimiento",
         "SHOW_BARCODES": "Ver los códigos de barras",
         "DELIVERY_FORM_SET_MANUALLY_PRICE": "Establecer el precio manualmente",
@@ -640,6 +671,12 @@
         "DELIVERY_FORM_NAME_INSTRUCTION": "El nombre que aparecerá en el resumen del pedido y la factura",
         "DELIVERY_FORM_VAT_PRICE": "Precio con IVA incluido",
         "DELIVERY_FORM_EXVAT_PRICE" : "Precio sin IVA",
+        "DELIVERY_FORM_HOW_IS_PRICE_CALCULATED": "¿Cómo se calcula el precio?",
+        "DELIVERY_FORM_PRICE_CALCULATION_CART": "Carrito",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_ITEM_TOTAL": "Total de artículos",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_TOTAL": "Total del pedido",
+        "DELIVERY_FORM_PRICE_CALCULATION_RULES": "Reglas de precios aplicadas",
+        "DELIVERY_FORM_PRICE_CALCULATION_VIEW_PRICING_RULE_SET": "Ver configuración de precios",
         "ADMIN_INVOICING_TITLE": "Facturación",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Pedidos a facturar",
         "ADMIN_ORDERS_TO_INVOICE_FILTER_RANGE": "Período",
@@ -664,6 +701,10 @@
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_STANDARD": "Estándar (CSV)",
         "ADMIN_ORDERS_TO_INVOICE_DESTINATION_ODOO": "Odoo (CSV)",
         "VIEW": "Ver",
-        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "No hay opciones disponibles para esta franja horaria. Contacta con un administrador si no te permite crear una entrega."
+        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "No hay opciones disponibles para esta franja horaria. Contacta con un administrador si no te permite crear una entrega.",
+        "TRY_AGAIN": "Intentar de nuevo",
+        "DEPRECATED": "Obsoleto",
+        "LOADING": "Cargando...",
+        "VIEW_DOCUMENTATION": "Ver documentación"
     }
 }
