--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -331,6 +331,8 @@
             "FOR_EVERY": "par tranche de",
             "ABOVE": "à partir de",
             "TYPE_FIXED": "Prix TTC fixe",
+            "TYPE_PERCENTAGE": "Pourcentage",
+            "TYPE_PERCENTAGE_HELP": "Dans la plupart des cas d'utilisation, la méthode de calcul : 'Toutes les règles correspondantes' est requise pour le prix basé sur un pourcentage.",
             "TYPE_RANGE": "Prix TTC par tranches",
             "TYPE_PER_PACKAGE": "Prix TTC par paquet",
             "PER_PACKAGE": "par paquet",
@@ -338,6 +340,33 @@
             "PER_PACKAGE_ADD_DISCOUNT": "Ajouter une réduction",
             "PER_PACKAGE_DEL_DISCOUNT": "Supprimer la réduction"
         },
+        "PRICING_ADD_RULE": "Ajouter une règle par commande",
+        "PRICING_ADD_RULE_HELP": "Ajouter une règle à appliquer une fois par commande, recommandée pour les livraisons simples (un retrait, un dépôt) et les commandes Food Tech",
+        "PRICING_ADD_RULE_PER_TASK": "Ajouter une règle par point",
+        "PRICING_ADD_RULE_PER_TASK_HELP": "Ajouter une règle à appliquer pour chaque point (tâche de RETRAIT et/ou de DÉPÔT), recommandée pour les livraisons complexes à points multiples",
+        "PRICING_PRICING_RULE_HELP": "Règles pour calculer le prix de la commande",
+        "PRICING_PRICING_RULE_SET_STRATEGY_FIND_LABEL": "La première règle qui correspond",
+        "PRICING_PRICING_RULE_SET_STRATEGY_LABEL": "Méthode de calcul",
+        "PRICING_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "Toutes les règles correspondantes",
+        "PRICING_PRICING_RULE_SET_STRATEGY_UNKNOWN_LABEL": "Inconnu",
+        "RULE_LEGACY_TARGET_DYNAMIC": "Livraisons simples (un retrait, un dépôt) : appliquer une fois par commande ; Livraisons multi-points : appliquer pour chaque point (tâche de RETRAIT et/ou de DÉPÔT) si :",
+        "RULE_LEGACY_TARGET_DYNAMIC_HELP": "Cette règle est obsolète en faveur de règles distinctes appliquées soit une fois par commande, soit par point. Veuillez envisager de migrer vers le nouveau format. (Voir le guide de migration ci-dessus)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "Ce schéma de tarification contient des règles obsolètes appliquées différemment pour les livraisons simples (un retrait, un dépôt) et les livraisons complexes à points multiples, ce qui les rend sujettes aux erreurs. Ainsi, l'utilisation de telles règles est déconseillée. Veuillez envisager de migrer vers le nouveau format :",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY": "Passer à : Appliquer les règles une fois par commande",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY_HELP": "(choisissez cette option si vous utilisez ce schéma de tarification pour les commandes Food Tech ou les livraisons simples (un retrait, un dépôt))",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK": "Passer à : Appliquer les règles pour chaque point (tâche de RETRAIT et/ou de DÉPÔT)",
+        "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK_HELP": "(choisissez cette option si vous utilisez ce schéma de tarification pour les livraisons complexes à points multiples)",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsolète",
+        "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Total des articles de commande Food Tech",
+        "RULE_PICKER_LINE_PACKAGES_TARGET_DELIVERY": "Colis (total)",
+        "RULE_PICKER_LINE_PACKAGES_TARGET_TASK": "Colis (à utiliser uniquement avec Type de tâche : Dépôt)",
+        "RULE_PICKER_LINE_TIME_SLOT": "Créneau horaire",
+        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_DELIVERY": "Unités de volume (total)",
+        "RULE_PICKER_LINE_VOLUME_UNITS_TARGET_TASK": "Unités de volume (à utiliser uniquement avec Type de tâche : Dépôt)",
+        "RULE_PICKER_LINE_WEIGHT_TARGET_DELIVERY": "Poids (kg) (total)",
+        "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Poids (kg) (à utiliser uniquement avec Type de tâche : Dépôt)",
+        "RULE_TARGET_DELIVERY": "Appliquer une fois par commande si :",
+        "RULE_TARGET_TASK": "Appliquer pour chaque point (tâche de RETRAIT et/ou de DÉPÔT) si :",
         "CASH_ON_DELIVERY_DISCLAIMER": "Vous allez payer en contre-remboursement. Veuillez préparer le montant exact en espèces et assurez-vous d'être joignable.",
         "RRULE": {
             "every": "chaque",
@@ -606,7 +635,7 @@
         "GROUP_ORDER_START": "Commencer une commande groupée",
         "GROUP_ORDER_SHARE_LINK": "Partagez le lien avec d'autres pour participer à votre commande. Une fois qu'ils ont terminé, vous pouvez passer la commande.",
         "GENERIC_BARCODE_HELP": "Ce code-barres de tâche peut suivre tous les colis liés comme une seule unité. Utilisez-le pour simplifier le suivi de l'ensemble de la livraison. Pour un suivi détaillé colis par colis, utilisez plutôt les codes-barres individuels des colis.",
-        "SWITCH_TIMESLOTPICKER": "Sélectionner une tranche horaire personnalisée", 
+        "SWITCH_TIMESLOTPICKER": "Sélectionner une tranche horaire personnalisée",
         "DELIVERY_FORM_PICKUP_INFORMATIONS": "Informations du retrait",
         "DELIVERY_FORM_DROPOFF_INFORMATIONS": "Informations du dépôt",
         "DELIVERY_FORM_PACKAGES": "Marchandises",
@@ -624,23 +653,29 @@
         "DELIVERY_FORM_TOTAL_PRICE": "Prix",
         "DELIVERY_FORM_TOTAL_VAT": "TTC",
         "DELIVERY_FORM_TOTAL_EX_VAT": "HT",
-        "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt", 
+        "DELIVERY_FORM_REMOVE_DROPOFF": "Retirer ce dépôt",
         "SWITCH_COMPLEX_DATEPICKER" : "Sélectionner une date sur plusieurs jours",
         "DELIVERY_FORM_SHOW_MORE" : "Voir plus",
         "DELIVERY_FORM_SHOW_LESS" : "Voir moins",
-        "DELIVERY_PICKUP" : "Retrait", 
-        "DELIVERY_DROPOFF": "Dépôt", 
-        "DELIVERY_FORM_PICKUP_HOUR" : "Heure de retrait", 
-        "DELIVERY_FORM_DROPOFF_HOUR" : "Heure de dépôt", 
+        "DELIVERY_PICKUP" : "Retrait",
+        "DELIVERY_DROPOFF": "Dépôt",
+        "DELIVERY_FORM_PICKUP_HOUR" : "Heure de retrait",
+        "DELIVERY_FORM_DROPOFF_HOUR" : "Heure de dépôt",
         "DELIVERY_FORM_NEW_PRICE" : "Nouveau prix",
-        "DELIVERY_FORM_OLD_PRICE" : "Ancien prix", 
-        "DELIVERY_FORM_TRACKING_LINK" : "Lien de suivi", 
+        "DELIVERY_FORM_OLD_PRICE" : "Ancien prix",
+        "DELIVERY_FORM_TRACKING_LINK" : "Lien de suivi",
         "DELIVERY_FROM_TRACKING_LINK_COPY" : "Copier le lien de suivi",
-        "DELIVERY_FORM_SET_MANUALLY_PRICE" : "Définir le prix manuellement", 
+        "DELIVERY_FORM_SET_MANUALLY_PRICE" : "Définir le prix manuellement",
         "DELIVERY_FORM_PRODUCT_NAME" : "Nom du produit",
         "DELIVERY_FORM_NAME_INSTRUCTION" : "Le nom qui apparaîtra dans le résumé de la commande et la facture",
         "DELIVERY_FORM_VAT_PRICE" : "Prix TTC",
         "DELIVERY_FORM_EXVAT_PRICE" : "Prix HT",
+        "DELIVERY_FORM_HOW_IS_PRICE_CALCULATED": "Comment le prix est-il calculé ?",
+        "DELIVERY_FORM_PRICE_CALCULATION_CART": "Panier",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_ITEM_TOTAL": "Total des articles",
+        "DELIVERY_FORM_PRICE_CALCULATION_ORDER_TOTAL": "Total de la commande",
+        "DELIVERY_FORM_PRICE_CALCULATION_RULES": "Règles de tarification appliquées",
+        "DELIVERY_FORM_PRICE_CALCULATION_VIEW_PRICING_RULE_SET": "Voir la configuration de tarification",
         "SHOW_BARCODES" : "Voir les codes-barres",
         "ADMIN_INVOICING_TITLE": "Facturation",
         "ADMIN_ORDERS_TO_INVOICE_TITLE": "Commandes à facturer",
@@ -669,6 +704,9 @@
         "SWITCH_BACK_TIMESLOTPICKER": "Returner au timeslot picker",
         "PAYMENT_FORM_ERROR": "Désolé, nous n'avons pas pu procéder au paiement",
         "TRY_AGAIN": "Réessayer",
-        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "Aucun choix n'est disponible pour ce créneau horaire. Veuillez contacter un administrateur si vous ne pouvez pas créer de livraison."
+        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "Aucun choix n'est disponible pour ce créneau horaire. Veuillez contacter un administrateur si vous ne pouvez pas créer de livraison.",
+        "DEPRECATED": "Obsolète",
+        "LOADING": "Chargement...",
+        "VIEW_DOCUMENTATION": "Voir la documentation"
     }
 }
