--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1,4 +1,5 @@
 global.changesSaved: Tus cambios han sido guardados.
+visitDocumentation.label: Consultar la documentación
 navbar.login: Iniciar sesión
 navbar.myAccount: Mi cuenta
 base.footer.contactUs: Contáctanos
@@ -770,6 +771,7 @@ form.time_slot_choice.start_time.label: Hora de inicio
 form.time_slot_choice.end_time.label: Hora de finalización
 form.package_set.name.label: Nombre
 form.package_set.packages.label: Paquetes
+form.package_set.duplicatePackageNames: Los nombres de los paquetes deben ser únicos
 form.package.enter_details: Mostrar/ocultar detalles
 form.package.name.label: Nombre
 form.package.description.label: Descripción para el cliente
@@ -1581,7 +1583,6 @@ api_apps.regenerate_secret_warning: Cualquier app usando esta salida de API con 
   secreto anterior dejará de funcionar.
 restaurant.form.cash_on_delivery_enabled.help: Esto permitirá clientes pagar en efectivo
   al repartidor. Use con cuidado.
-docs.label: Documentos
 roles.ROLE_DISPATCHER.help: "Dispatcher: Acceso total a las tareas\n"
 activity.order.restored: 'El pedido #order/%aggregate_id% ha sido restablecido'
 order.cart.donation: Donación
