--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1675,3 +1675,5 @@ store.form.storeGLN.label: Store GLN
 store.form.storeGLN.help: Find the GLN number on <a href="https://www.gs1.org/services/verified-by-gs1" target="_blank">GS1 website</a>
 form.settings.company_gln.label: Company GLN
 form.task.barcode.label: Barcode
+restaurant.stats.show_only_meal_vouchers: Show only orders paid with meal vouchers
+restaurant.stats.show_all: Show all orders
