--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1618,3 +1618,5 @@ form.settings.on_demand_delivery_product_name.label: "Nom du produit"
 form.settings.on_demand_delivery_product_name.help: "Le nom qui apparaîtra dans le récapitulatif de commande et la facture"
 form.settings.accounting_account.label: "Code comptable"
 form.settings.accounting_account.help: "Le code comptable par défaut pour enregistrer les commandes de livraison à la demande dans le système comptable."
+restaurant.stats.show_only_meal_vouchers: Afficher uniquement les commandes payées en titres-restaurant
+restaurant.stats.show_all: Afficher toutes les commandes
