--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -716,6 +716,9 @@
         "PAYMENT_FORM_ERROR": "Sorry, we could not process your payment",
         "TRY_AGAIN": "Try again",
         "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "There are no choices available for this time slot. Please contact an admin if it blocks you to create a delivery.",
-        "CART_SHIPPING_ADDRESS_MAP_PICKED": "Address selected via the map"
+        "CART_SHIPPING_ADDRESS_MAP_PICKED": "Address selected via the map",
+        "ADDRESS_AUTOSUGGEST_MAP_PICKER_LABEL": "Cannot find your address?",
+        "SELECT_YOUR_LOCATION": "Select your location",
+        "CONFIRM_LOCATION": "Confirm location"
       }
 }
