--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -434,6 +434,7 @@
         "RULE_PICKER_LINE_TASK_TYPE": "Type de tâche",
         "RECURRENCE_RULE_ADD": "Ajouter une règle de récurrence",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Veuillez choisir au moins un jour",
+        "DELIVERY_FORM_RECURRENCE_RULE": "Répéter",
         "SUBSCRIPTION_CANCELLED": "Règle de récurrence annulée",
         "CART_ENABLE_ZERO_WASTE": "Activer l'option zéro déchet",
         "CART_ZERO_WASTE_POPUP_TEXT": "<p>Bravo !<br/>Votre panier contient un plat éligible à la livraison zéro-déchet avec notre partenaire « {{name}} ».</p><p>Faites-vous livrer en boîtes consignées et retournez vos boîtes partout dans le réseau « {{name}} » ou à votre coursier à la prochaine commande.</p><p>Vous pouvez désactiver le système de consigne à tout moment.</p>",
