added: clone button

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -941,6 +941,7 @@ basics.edit: Edit
 basics.editing: Editing
 basics.delete: Delete
 basics.cancel: Cancel
+basics.clone: Clone
 basics.open: Open
 basics.tomorrow: Tomorrow
 basics.price: Price
