--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -210,6 +210,7 @@
         "DELIVERY_FORM_NAME_INSTRUCTION": "Der Name, der in der Bestellübersicht und auf der Rechnung erscheint",
         "DELIVERY_FORM_VAT_PRICE": "Preis inklusive MwSt.",
         "DELIVERY_FORM_EXVAT_PRICE" : "Preis ohne MwSt.",
+        "DELIVERY_FORM_SAVED_ORDER": "Zu gespeicherten Bestellungen hinzufügen",
         "ORDER_LIST_PREPARATION_TIME": "Vorbereitungszeit",
         "MEDIUM": "Mittel",
         "SHOW_CLOSED_INCIDENTS": "Zeige geschlossene Vorfälle",
