--- a/js/app/i18n/locales/cs.json
+++ b/js/app/i18n/locales/cs.json
@@ -582,13 +582,13 @@
         "PAYMENT_FORM_ELIGIBLE_AMOUNT_EDENRED": "Oprávněná částka Ticket Restaurant®",
         "PAYMENT_FORM_CARD_COMPLEMENT": "Částka k úhradě kreditní kartou",
         "MEAL_VOUCHER_DISCLAIMER": "Stravenky lze použít pouze k objednávce jídla. Poplatky za doručení a služby budou proto strženy prostřednictvím vaší obvyklé platební metody (Mastercard, Visa).",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Našli jsme optimálnější trasu pro vaši zásilku.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Díky tomu bychom získali vzdálenost {{distance}}.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Chcete použít optimalizovanou cestu?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Našli jsme optimalizovanou trasu pro vaše doručení.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Ušetřilo by to vzdálenost <b>{{distance}}</b>.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Chcete použít optimalizovanou trasu?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Aktuální trasa",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Navrhovaná trasa",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Ano",
         "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Ne, děkuji",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Aktuální pořadí",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Navrhované pořadí",
         "MONTHLY_FIXED_COSTS": "Měsíční fixní náklady",
         "RRULE": {
             "every": "každý",
