--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -345,10 +345,11 @@
         "TIME_SLOTS_SELECT": "Wähle eine Zeitspanne",
         "TIME_SLOTS_SET_DEFAULT": "Setze als Standard-Zeitfenster",
         "TIME_SLOTS": "Zeitfenster",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Wir haben eine optimierte Route für deine Lieferung gefunden.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Damit würdest du {{distance}} einsparen.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Möchtest du die optimierte Route annehmen?",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Aktueller Auftrag",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Wir haben eine optimierte Route für Ihre Lieferung gefunden.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Es würde eine Strecke von <b>{{distance}}</b> einsparen.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Möchten Sie die optimierte Route anwenden?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Aktuelle Route",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Vorgeschlagene Route",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Ja",
         "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Nein danke",
         "MONTHLY_FIXED_COSTS": "Monatliche Fixkosten",
