--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -558,11 +558,11 @@
         "PM_CREDIT_OR_DEBIT_CARD": "Carte bancaire",
         "PM_CASH": "Espèces",
         "PM_EDENRED": "Edenred",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Nous avons trouvé une route plus optimisée pour votre livraison.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Celle-ci nous ferait gagner une distance de {{distance}}.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Voulez-vous appliquer la route optimisée ?",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Ordre actuel",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Ordre suggéré",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Nous avons trouvé un itinéraire plus optimisé pour votre livraison.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Cela permettrait d'économiser une distance de <b>{{distance}}</b>.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "Souhaitez-vous appliquer l'itinéraire optimisé ?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Itinéraire actuel",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Itinéraire suggéré",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Oui",
         "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "Non, merci",
         "MONTHLY_FIXED_COSTS": "Coûts fixes mensuels",
