--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -490,7 +490,6 @@
         "ADMIN_DASHBOARD_LOADING_ORGS": "Cargando tiendas y comercios...",
         "ADMIN_DASHBOARD_NO_COMPATIBLE_TRAILER": "No hay remolques compatibles con esta bicicleta",
         "DELIVERY_OPTIMIZATION_SUGGESTION_YES": "Si, quiero",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Orden sugerida",
         "DELIVERY_OPTIMIZATION_SUGGESTION_NO": "No, gracias",
         "DASHBOARD_UNASSIGNED_TOURS": "Rutas no asignadas",
         "ADMIN_PLEASE_UNLINK_TIME_SLOT_BEFORE_DELETION": "No se ha podido borrar. Por favor, desvincule esta franja horaria de las tiendas o formularios de entrega",
@@ -611,10 +610,11 @@
         "PAYMENT_FORM_ELIGIBLE_AMOUNT_EDENRED": "Importe del Ticket Restaurant® elegible",
         "PAYMENT_FORM_CARD_COMPLEMENT": "Importe a pagar con tarjeta de crédito",
         "MEAL_VOUCHER_DISCLAIMER": "Los vales de comida sólo pueden utilizarse para encargar comida. Por lo tanto, los gastos de entrega y servicio se cargarán a través de su método de pago habitual (Mastercard, Visa).",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Hemos encontrado una ruta más optimizada para el envío.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Esto nos hace ahorrar{{distance}}.",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "¿Quiere aplicar la ruta optimizada?",
-        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Orden actual",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_TITLE": "Hemos encontrado una ruta más optimizada para su entrega.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_GAIN": "Ahorraría una distancia de <b>{{distance}}</b>.",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CONFIRM": "¿Desea aplicar la ruta optimizada?",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_CURRENT": "Ruta actual",
+        "DELIVERY_OPTIMIZATION_SUGGESTION_SUGGESTED": "Ruta sugerida",
         "MONTHLY_FIXED_COSTS": "Gastos fijos mensuales",
         "TASK": "Tarea",
         "ORDER_DETAILS": "Detalles del pedido",
