allow to configure recurrence using a custom string

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -176,6 +176,9 @@
         "DELIVERY_FORM_RECURRENCE_RULE": "Repeat",
         "RECURRENCE_RULE_ADD": "Add recurrence rule",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Please choose at least one day",
+        "RECURRENCE_RULE_INVALID": "Please check the recurrence rule",
+        "RECURRENCE_ADVANCED": "Advanced",
+        "RECURRENCE_OVERRIDE_RULE": "Override recurrence rule",
         "SUBSCRIPTION_CANCELLED": "Recurrence rule cancelled",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Are you sure you want to delete all the tasks in this group?",
         "ADMIN_DASHBOARD_DELETE_TOUR_CONFIRM": "Delete this tour and move tasks to \"Unassigned\"",
