--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -367,6 +367,9 @@
         "ADMIN_DASHBOARD_ONLY_UNASSIGNED_WITH_SHIFT": "Solo la columna de tareas no asignadas maneja la selección con la tecla shift",
         "RECURRENCE_RULE_ADD": "Agregar regla de recurrencia",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Por favor, elija al menos un día",
+        "RECURRENCE_RULE_INVALID": "Por favor, verifique la regla de recurrencia",
+        "RECURRENCE_ADVANCED": "Avanzado",
+        "RECURRENCE_OVERRIDE_RULE": "Anular regla de recurrencia",
         "DELIVERY_FORM_RECURRENCE_RULE": "Repetir",
         "DELIVERY_FORM_SAVED_ORDER": "Añadir a Pedidos guardados",
         "SUBSCRIPTION_CANCELLED": "Regla de recurrencia cancelada",
