--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -434,6 +434,9 @@
         "RULE_PICKER_LINE_TASK_TYPE": "Type de tâche",
         "RECURRENCE_RULE_ADD": "Ajouter une règle de récurrence",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Veuillez choisir au moins un jour",
+        "RECURRENCE_RULE_INVALID": "Veuillez vérifier la règle de récurrence",
+        "RECURRENCE_ADVANCED": "Avancé",
+        "RECURRENCE_OVERRIDE_RULE": "Remplacer la règle de récurrence",
         "DELIVERY_FORM_RECURRENCE_RULE": "Répéter",
         "DELIVERY_FORM_SAVED_ORDER": "Ajouter aux Commandes enregistrées",
         "SUBSCRIPTION_CANCELLED": "Règle de récurrence annulée",
