--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -435,6 +435,16 @@
         "CART_ADDRESS_MODAL_BACK_TO_RESTAURANTS": "Zurück zur Restaurantliste",
         "ADMIN_DASHBOARD_CREATE_TOUR": "Erstelle Tour",
         "SCHEDULE_ORDER": "Auftrag planen",
-        "ADMIN_DASHBOARD_MOVE_TO_NEXT_DAY_MULTI": "Verschiebe {{count}} Aufgaben zum nächsten Tag"
+        "ADMIN_DASHBOARD_MOVE_TO_NEXT_DAY_MULTI": "Verschiebe {{count}} Aufgaben zum nächsten Tag",
+        "DELIVERY_PROOFS_LINK_TEXT": "Liefernachweise",
+        "DELIVERY_PROOFS_MODAL_TITLE": "Liefernachweise Herunterladen",
+        "DELIVERY_PROOFS_DOWNLOAD_BUTTON": "Herunterladen",
+        "DELIVERY_PROOFS_CHOOSE_WEEK": "Woche auswählen",
+        "DELIVERY_PROOFS_TOTAL_DELIVERIES": "Lieferungen Gesamt",
+        "DELIVERY_PROOFS_DELIVERIES_COUNT": "{{count}} Lieferungen",
+        "DELIVERY_PROOFS_CONTENTS": "Inhalt",
+        "DELIVERY_PROOFS_CONTENTS_VALUE": "Fotos & Berichte",
+        "DELIVERY_PROOFS_FILE_TYPE": "Dateityp",
+        "DELIVERY_PROOFS_FILE_TYPE_VALUE": "ZIP-Archiv"
     }
 }
