--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -715,6 +715,16 @@
         "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "Aucun choix n'est disponible pour ce créneau horaire. Veuillez contacter un administrateur si vous ne pouvez pas créer de livraison.",
         "DEPRECATED": "Obsolète",
         "LOADING": "Chargement...",
-        "VIEW_DOCUMENTATION": "Voir la documentation"
+        "VIEW_DOCUMENTATION": "Voir la documentation",
+        "DELIVERY_PROOFS_LINK_TEXT": "Preuves de Livraison",
+        "DELIVERY_PROOFS_MODAL_TITLE": "Télécharger les Preuves de Livraison",
+        "DELIVERY_PROOFS_DOWNLOAD_BUTTON": "Télécharger",
+        "DELIVERY_PROOFS_CHOOSE_WEEK": "Choisir une semaine",
+        "DELIVERY_PROOFS_TOTAL_DELIVERIES": "Total des Livraisons",
+        "DELIVERY_PROOFS_DELIVERIES_COUNT": "{{count}} livraisons",
+        "DELIVERY_PROOFS_CONTENTS": "Contenu",
+        "DELIVERY_PROOFS_CONTENTS_VALUE": "Photos et Rapports",
+        "DELIVERY_PROOFS_FILE_TYPE": "Type de Fichier",
+        "DELIVERY_PROOFS_FILE_TYPE_VALUE": "Archive ZIP"
     }
 }
