--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -369,7 +369,7 @@
         "ADMIN_DASHBOARD_GROUP_NAME_LABEL": "Nome del gruppo",
         "RULE_PICKER_LINE_VOLUME_UNITS": "Unità di volume",
         "GENERIC_BARCODE_HELP": "Questo codice a barre dell'attività può tracciare tutti i pacchi collegati come un'unica unità. Utilizzalo per semplificare il monitoraggio dell'intera consegna. Per un monitoraggio dettagliato pacco per pacco, utilizza invece i codici a barre dei singoli pacchi.",
-        "SWITCH_TIMESLOTPICKER": "Selezionare una fascia oraria personalizzata", 
+        "SWITCH_TIMESLOTPICKER": "Selezionare una fascia oraria personalizzata",
         "DELIVERY_FORM_PICKUP_INFORMATIONS": "Informazioni sul ritiro",
         "DELIVERY_FORM_DROPOFF_INFORMATIONS": "Informazioni sulla consegna",
         "DELIVERY_FORM_PACKAGES": "Merci",
@@ -394,15 +394,25 @@
         "DELIVERY_DROPOFF": "Consegna",
         "DELIVERY_FORM_PICKUP_HOUR": "Ora di ritiro",
         "DELIVERY_FORM_DROPOFF_HOUR": "Ora di consegna",
-        "DELIVERY_FORM_NEW_PRICE": "Nuovo prezzo",  
-        "DELIVERY_FORM_OLD_PRICE": "Prezzo precedente",  
-        "DELIVERY_FORM_TRACKING_LINK": "Link di tracciamento",  
+        "DELIVERY_FORM_NEW_PRICE": "Nuovo prezzo",
+        "DELIVERY_FORM_OLD_PRICE": "Prezzo precedente",
+        "DELIVERY_FORM_TRACKING_LINK": "Link di tracciamento",
         "DELIVERY_FROM_TRACKING_LINK_COPY": "Copia link di tracciamento",
         "SHOW_BARCODES": "Vedi i codici a barre",
         "DELIVERY_FORM_SET_MANUALLY_PRICE": "Imposta il prezzo manualmente",
         "DELIVERY_FORM_PRODUCT_NAME": "Nome del prodotto",
         "DELIVERY_FORM_NAME_INSTRUCTION": "Il nome che apparirà nel riepilogo dell'ordine e nella fattura",
         "DELIVERY_FORM_VAT_PRICE": "Prezzo IVA inclusa",
-        "DELIVERY_FORM_EXVAT_PRICE" : "Prezzo IVA esclusa"
+        "DELIVERY_FORM_EXVAT_PRICE" : "Prezzo IVA esclusa",
+        "DELIVERY_PROOFS_LINK_TEXT": "Prove di Consegna",
+        "DELIVERY_PROOFS_MODAL_TITLE": "Scarica Prove di Consegna",
+        "DELIVERY_PROOFS_DOWNLOAD_BUTTON": "Scarica",
+        "DELIVERY_PROOFS_CHOOSE_WEEK": "Scegli una settimana",
+        "DELIVERY_PROOFS_TOTAL_DELIVERIES": "Consegne Totali",
+        "DELIVERY_PROOFS_DELIVERIES_COUNT": "{{count}} consegne",
+        "DELIVERY_PROOFS_CONTENTS": "Contenuto",
+        "DELIVERY_PROOFS_CONTENTS_VALUE": "Foto e Rapporti",
+        "DELIVERY_PROOFS_FILE_TYPE": "Tipo di File",
+        "DELIVERY_PROOFS_FILE_TYPE_VALUE": "Archivio ZIP"
     }
 }
