--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -201,6 +201,7 @@
         "ADMIN_DASHBOARD_AND_CLOSE_THE_INCIDENT": "{{action}} and close the incident",
         "ADMIN_DASHBOARD_LOADING_ORGS": "Loading stores and shops...",
         "ADMIN_DASHBOARD_NO_COMPATIBLE_TRAILER": "No compatible trailers with this bike",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "This way of creating recurrence rules is deprecated, please set up recurrence via a Delivery form instead.",
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
