added: create a delivery button to dispatch

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -173,6 +173,8 @@
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_ASC": "Display by dropoff asc.",
         "ADMIN_DASHBOARD_RECURRENCE_RULE_MODAL_TITLE": "Recurrence rule",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Show recurrence rules",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Create new task (Legacy)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Create new recurrence rule (Legacy)",
         "DELIVERY_FORM_RECURRENCE_RULE": "Repeat",
         "RECURRENCE_RULE_ADD": "Add recurrence rule",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Please choose at least one day",
@@ -492,6 +494,7 @@
         "ADHOC_ORDER_FAILURE": "There was an error trying to save the order. Please check the information and try again.",
         "CREATE_ORDER": "Create order",
         "CREATE_NEW_ORDER": "Create new order",
+        "CREATE_NEW_DELIVERY": "Create new delivery",
         "SEARCH_EXISTING_ORDER": "Search an existing order",
         "ORDER_NUMBER": "Order number",
         "CONTINUE_EXISTING_ORDER": "Continue an existing order",
