--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -35,7 +35,7 @@
         "started": "In preparation",
         "ready": "Ready",
         "FEATURE_PREVIEW": "Preview",
-        "DEPRECATED": "Deprecated",
+        "DEPRECATED": "Legacy",
         "VIEW_DOCUMENTATION": "View documentation",
         "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
         "LOADING": "Loading...",
@@ -173,8 +173,8 @@
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_ASC": "Display by dropoff asc.",
         "ADMIN_DASHBOARD_RECURRENCE_RULE_MODAL_TITLE": "Recurrence rule",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Show recurrence rules",
-        "ADMIN_DASHBOARD_CREATE_TASK": "Create new task (Legacy)",
-        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Create new recurrence rule (Legacy)",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Create a standalone task (legacy)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Create a recurrence rule (legacy)",
         "DELIVERY_FORM_RECURRENCE_RULE": "Repeat",
         "RECURRENCE_RULE_ADD": "Add recurrence rule",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Please choose at least one day",
@@ -203,7 +203,7 @@
         "ADMIN_DASHBOARD_AND_CLOSE_THE_INCIDENT": "{{action}} and close the incident",
         "ADMIN_DASHBOARD_LOADING_ORGS": "Loading stores and shops...",
         "ADMIN_DASHBOARD_NO_COMPATIBLE_TRAILER": "No compatible trailers with this bike",
-        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "This way of creating recurrence rules is deprecated, please set up recurrence via a Delivery form instead.",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "This is a legacy way of creating recurrence rules, please set up recurrence via a Delivery form instead.",
         "ADMIN_WAREHOUSE_FORM_TITLE": "Create a warehouse",
         "ADMIN_WAREHOUSE_NAME_LABEL": "Name",
         "ADMIN_WAREHOUSE_ADDRESS_LABEL": "Adresse",
@@ -299,7 +299,7 @@
         "RULE_PICKER_LINE_ORDER_ITEMS_TOTAL": "Food Tech Order Items total",
         "RULE_PICKER_LINE_TIME_SLOT": "Time slot",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Delivery",
-        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Deprecated",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Legacy",
         "ORDER_LIST_STATE": "State",
         "ORDER_LIST_PREPARATION_TIME": "Preparation time",
         "ORDER_LIST_PICKUP_TIME": "Pickup time",
